--- a/templates/gotaweb/index.html
+++ b/templates/gotaweb/index.html
@@ -5,18 +5,19 @@
     <!--Importamos hoja de estilo leaflet.css, 
     librería leaflet.js, y Plugin para cargar otros CRS's-->
 
-    {% load static %} <!--carga archivos estáticos en Django-->
+    <!-- carga archivos estáticos en Django
+    {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'gotaweb/css/leaflet.css' %}">
-    <script type="text/javascript" src="{% static 'gotaweb/js/leaflet.js' %}"></script>
+    <script type="text/javascript" src="{% static 'gotaweb/js/leaflet.js' %}"></script>-->
 
     <!--carga archivos estáticos SIN Django-->
-    <!--<link rel="stylesheet" type="text/css" href="gotaweb/css/leaflet.css">
-    <script type="text/javascript" src="gotaweb/js/leaflet.js"></script>-->
-    
-    <!--<script> src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.5.0/proj4.js"></script>
-    ==========https://github.com/proj4js/proj4js-->
+    <link rel="stylesheet" type="text/css" href="css/leaflet.css">
+    <script type="text/javascript" src="js/leaflet.js"></script>        
 
     <!--scripts necesarios para el plugin proj4 (uso sistemas coordenadas distintos)-->
+    <!--(OPCION1) <script> src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.5.0/proj4.js"></script>
+    ==========https://github.com/proj4js/proj4js-->
+    
     <script src="https://mappinggis.com/visores_webmapping/Proj4Leaflet-leaflet-proj-refactor/lib/proj4-compressed.js"></script>
     <script src="https://mappinggis.com/visores_webmapping/Proj4Leaflet-leaflet-proj-refactor/src/proj4leaflet.js"></script>
   </head>
@@ -25,8 +26,8 @@
     <style>
 	/*Establecemos un tamaño predefinido*/
       #map { 
-        width: 100%;
-        height: 720px;
+        width: 100%;        
+        height: 900px;
         box-shadow: 5px 5px 5px #888;
       }
     </style>
@@ -34,8 +35,8 @@
     <!--Contenedor del mapa-->
     <div id = "map"></div>   
     
-    <script src="{% static 'gotaweb/js/main.js' %}"></script>
-    <!--<script src="gotaweb/js/main.js"></script>-->
+    <!--script src="{% static 'gotaweb/js/main.js' %}"></script-->
+    <script src="js/main.js"></script>
     
   </body>
 </html>
