--- a/templates/gotaweb/index.html
+++ b/templates/gotaweb/index.html
@@ -20,6 +20,12 @@
     
     <script src="https://mappinggis.com/visores_webmapping/Proj4Leaflet-leaflet-proj-refactor/lib/proj4-compressed.js"></script>
     <script src="https://mappinggis.com/visores_webmapping/Proj4Leaflet-leaflet-proj-refactor/src/proj4leaflet.js"></script>
+    
+    <!-- leaflet.TimeDimension (plugin) -->
+    <link rel="stylesheet" href="https://cdn.rawgit.com/socib/Leaflet.TimeDimension/master/dist/leaflet.timedimension.control.min.css" />
+    <script type="text/javascript" src="https://cdn.rawgit.com/nezasa/iso8601-js-period/master/iso8601.min.js"></script>
+    <script type="text/javascript" src="https://cdn.rawgit.com/socib/Leaflet.TimeDimension/master/dist/leaflet.timedimension.min.js"></script>
+    
   </head>
   
   <body>
