--- a/templates/gotaweb/index.html
+++ b/templates/gotaweb/index.html
@@ -12,23 +12,28 @@
 
     <!--carga archivos estáticos SIN Django-->
     <link rel="stylesheet" type="text/css" href="css/leaflet.css">
-    <script type="text/javascript" src="js/leaflet.js"></script>        
+    <script type="text/javascript" src="js/leaflet.js"></script>
+    <!--<link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css">
+    <script type="text/javascript" src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>*************************-->
 
     <!--scripts necesarios para el plugin proj4 (uso sistemas coordenadas distintos)-->
     <!--(OPCION1) <script> src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.5.0/proj4.js"></script>
-    ==========https://github.com/proj4js/proj4js-->
-    
+    ====(OPCION2) =====https://github.com/proj4js/proj4js-->    
     <script src="https://mappinggis.com/visores_webmapping/Proj4Leaflet-leaflet-proj-refactor/lib/proj4-compressed.js"></script>
     <script src="https://mappinggis.com/visores_webmapping/Proj4Leaflet-leaflet-proj-refactor/src/proj4leaflet.js"></script>
     
-    <!-- leaflet.TimeDimension (plugin) -->
+    <!-- leaflet.TimeDimension (plugin)-->
     <link rel="stylesheet" href="https://cdn.rawgit.com/socib/Leaflet.TimeDimension/master/dist/leaflet.timedimension.control.min.css" />
     <script type="text/javascript" src="https://cdn.rawgit.com/nezasa/iso8601-js-period/master/iso8601.min.js"></script>
     <script type="text/javascript" src="https://cdn.rawgit.com/socib/Leaflet.TimeDimension/master/dist/leaflet.timedimension.min.js"></script>
     
+    <!-- leaflet.WMS (plugin)-->
+    <script src="https://mappinggis.com/visores_webmapping/leaflet/catastro/leaflet.wms.js"></script>
+    
   </head>
   
-  <body>
+  <body>          
+    
     <style>
 	/*Establecemos un tamaño predefinido*/
       #map { 
@@ -36,7 +41,7 @@
         height: 900px;
         box-shadow: 5px 5px 5px #888;
       }
-    </style>
+    </style>    
 
     <!--Contenedor del mapa-->
     <div id = "map"></div>   
