--- a/templates/gotaweb/index.html
+++ b/templates/gotaweb/index.html
@@ -5,16 +5,16 @@
     <!--Importamos hoja de estilo leaflet.css, 
     librería leaflet.js, y Plugin para cargar otros CRS's-->
 
-    <!-- carga archivos estáticos en Django
+    <!-- carga librería Leaflet en "estáticos" de Django
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'gotaweb/css/leaflet.css' %}">
     <script type="text/javascript" src="{% static 'gotaweb/js/leaflet.js' %}"></script>-->
 
-    <!--carga archivos estáticos SIN Django-->
-    <link rel="stylesheet" type="text/css" href="css/leaflet.css">
-    <script type="text/javascript" src="js/leaflet.js"></script>
-    <!--<link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css">
-    <script type="text/javascript" src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>*************************-->
+    <!-- carga librería Leaflet SIN Django (en local)-->
+    <!--<link rel="stylesheet" type="text/css" href="css/leaflet.css">
+    <script type="text/javascript" src="js/leaflet.js"></script>***-->
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css">
+    <script type="text/javascript" src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 
     <!--scripts necesarios para el plugin proj4 (uso sistemas coordenadas distintos)-->
     <!--(OPCION1) <script> src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.5.0/proj4.js"></script>
@@ -27,26 +27,47 @@
     <script type="text/javascript" src="https://cdn.rawgit.com/nezasa/iso8601-js-period/master/iso8601.min.js"></script>
     <script type="text/javascript" src="https://cdn.rawgit.com/socib/Leaflet.TimeDimension/master/dist/leaflet.timedimension.min.js"></script>
     
-    <!-- leaflet.WMS (plugin)-->
-    <script src="https://mappinggis.com/visores_webmapping/leaflet/catastro/leaflet.wms.js"></script>
-    
   </head>
   
   <body>          
     
     <style>
-	/*Establecemos un tamaño predefinido*/
+	/*Establecemos un tamaño predefinido de alto del mapa*/
       #map { 
         width: 100%;        
-        height: 900px;
+        height: 600px;
         box-shadow: 5px 5px 5px #888;
       }
+	 .demo1 { /*Estilo del div de sliders (Elevation y Opacidad)*/
+	   position: relative;
+	   float: right;
+	   z-index: 800;
+	   right: 5px;
+	   bottom: 150px;
+	   background-color: rgba(255, 255, 255, 0.5);
+	   font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
+	   border: 2px solid #333333;
+	   border-radius: 5px;
+	 }
+
     </style>    
 
     <!--Contenedor del mapa-->
     <div id = "map"></div>   
-    
+
+
+    <!--div de sliders (Elevation y Opacidad)-->
+    <div class= "demo1">
+      <em style="background-color:#333333; color:white">Altura: </span><span id="demo1"></em>
+      <input type="range" id="myRange"><br><br>
+      <em style="background-color:green; color:white">Opacidad </em>
+      <input type="range" id="opacidad">
+    </div>
+
+    <!-- llamada de script JS en Django-->
     <!--script src="{% static 'gotaweb/js/main.js' %}"></script-->
+
+    <!-- llamada de script JS SIN Django (en local)-->
     <script src="js/main.js"></script>
     
   </body>
