--- a/templates/gotaweb/indexGota.html
+++ b/templates/gotaweb/indexGota.html
@@ -34,15 +34,18 @@
   
   <body>
     <style>
-      
-    /*Establecemos un tamaño predefinido de alto del mapa*/
+
+/*        #######  MAPA  ######     */
+
       #map { 
         width: 100%;        
         height: 900px;
         box-shadow: 5px 5px 5px #888;
       }
 
-      .demo1 { /*Estilo del div de sliders (Elevation y Opacidad)*/
+/*        #######  SLIDERS  ######     */
+
+      .demo1 {
         position: relative;
         float: right;
         z-index: 800;
@@ -50,10 +53,8 @@
         bottom: 125px;
         background-color: rgba(255, 255, 255, 0.5);
         font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
-        border-radius: 5px;
+        border-radius: 5px;        
       }
-
-  /*        #################################     */
 
       .container {
         float: right;
@@ -95,7 +96,7 @@
       .slider-fill {
         position: absolute;
         top: 50%;
-        background: #5AA4D4; /*#a1a1a1*/
+        background: #5AA4D4;
         height: calc(100%);
         border-radius: 3px;
         transform: translateY(-50%);
@@ -129,6 +130,7 @@
         transform: translateY(-100%);
         transition: all ease 0.25s;
       }
+
       .range-text:before {
         content: "";
         position: absolute;
@@ -142,10 +144,65 @@
         transform: translateX(-50%);
       }
 
+/*        #######  COLLAPSIBLE  ######     */
+
+      .collapsible {
+        position: absolute;
+        float: top left;
+        z-index: 800;
+        top: 25px;
+        left: 75px;
+        background-color: #555;
+        color: white;
+        cursor: pointer;
+        padding: 20px;
+        height:max-content;
+        width: max-content;
+        border: none;
+        text-align: left;
+        outline: none;
+        font-weight: bold;
+        font-size: 15px;
+        border-radius: 5px;
+      }
+
+      .active, .collapsible:hover {
+        background-color: rgb(77, 177, 135);
+      }
+
+      .collapsible:after {
+        content: '\2935';
+        color: white;
+        font-weight: bold;
+        float: right;
+        margin-left: 5px; 
+      }
+
+      .content {
+        position: absolute;
+        float: top left;
+        z-index: 800;
+        top: 83px;
+        left: 75px;
+        height:max-content;
+        width: 300px;
+        padding: 0 10px;        
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.2s ease-out;
+        background-color: #f1f1f1;
+        border-radius: 5px;
+      }
+
     </style>    
 
     <!--Contenedor del mapa-->
     <div id = "map"></div>
+
+    <button class="collapsible">Resumen de la capa activa</button>
+    <div class="content">
+      <p>Abstract de la capa seleccionada</p>
+    </div>     
 
     <div class= "demo1">
       <em style="position:absolute; background-color:#4c8632; color:white; margin-left:10px; padding:5px">Altura:</em>
