--- a/templates/gotaweb/indexGota.html
+++ b/templates/gotaweb/indexGota.html
@@ -27,6 +27,10 @@
     <script type="text/javascript" src="https://cdn.rawgit.com/nezasa/iso8601-js-period/master/iso8601.min.js"></script>
     <script type="text/javascript" src="https://cdn.rawgit.com/socib/Leaflet.TimeDimension/master/dist/leaflet.timedimension.min.js"></script>
 
+    <!-- leaflet.Velocity (plugin)-->
+    <link rel="stylesheet" type="text/css" href="css/leaflet-velocity.css">
+    <script type="text/javascript" src="js/leaflet-velocity.js"></script>
+
     <!-- JQUERY-->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>    
     
@@ -194,11 +198,29 @@
         border-radius: 5px;
       }
 
+      /*        #######  Logo-imagen  ######     */
+
+      #logoGota {        
+        position: absolute;
+        top: 15px;
+        left: 50%;
+        z-index: 800;
+        width: 300px;
+        height: auto;
+        opacity: 0.75;
+        border-radius: 10px;
+      }
+
     </style>    
+
+    <!--Logo-->
+    <a href='https://portalciencia.ull.es/grupos/6295/detalle'>
+      <img id='logoGota' src="gotaLogo.jpg" width="450" height="115">
+    </a>
 
     <!--Contenedor del mapa-->
     <div id = "map"></div>
-
+    
     <button class="collapsible">Resumen de la capa activa</button>
     <div class="content">
       <p>Abstract de la capa seleccionada</p>
